<resources>
    <string name="app_name">IpialesTravel</string>
    <string name="titulo">titulo</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="iniciar">iniciar</string>
    <string name="registers">registers</string>
    <string name="Ipiales">Ipiales</string>
    <string name="titulo_tab_sitio1">Sitio1</string>
    <string name="titulo_tab_sitio2">Sitio2</string>
    <string name="titulo_tab_sitio3">Sitio3</string>
    <string name="usernamei">Nombre de Usuario</string>
    <string name="passwordd">Contraseña</string>
    <string name="registerss">Registrarse</string>
    <string name="Registrar">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="repasswordd">Repetir Contraseña</string>
    <string name="correo">Correo Electronico</string>
    <string name="Registro">Registro</string>
    <string name="miPerfil">Mi perfil</string>
    <string name="cerrar">Cerrar sesion</string>
    <string name="Bienvenido">¡Bienvenido a la ciudad de las nubes verdes!</string>
    <string name="Ipialescap">Ipiales Capital del Sur</string>
    <string name="Principal">Menu Principal</string>
    <string name="saludo">Saludos:</string>
    <string name="title_activity_hotel">HotelActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_bares">BaresActivity</string>
    <string name="title_activity_sitios">SitiosActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Hmayas">Hosteria Mayasquer</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_drawer_bares">DrawerBares</string>
    <string name="title_activity_drawer_sitios">DrawerSitiosActivity</string>
    <string name="title_activity_drawer_main">DrawerMainActivity</string>
    <string name="title_activity_drawer__perfil">Drawer_Perfil</string>
    <string name="title_activity_drawer_perfil">DrawerPerfilActivity</string>
    <string name="title_activity_drawer_hotel">DrawerHotelActivity</string>
    <string name="title_activity_drawer_bar">DrawerBarActivity</string>
</resources>
