<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/mintcream"
    tools:context="com.camilobc.ipialestravel.RegistroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Registro"
        android:textColor="#9f3730"
        android:textSize="24sp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:src="@drawable/ipi"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usernamei"
        android:gravity="center"
        android:id="@+id/eRuser"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordd"
        android:gravity="center"
        android:id="@+id/eRpass"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repasswordd"
        android:gravity="center"
        android:id="@+id/eRrepass"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:gravity="center"
        android:id="@+id/eRcorreo"
        android:inputType="textEmailAddress"/>
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Registrar"
            android:textColor="@color/white"
            android:background="#9f3730"
            android:layout_gravity="center"
            android:id="@+id/bRregistrar"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="#9f3730"
            android:text="@string/cancelar"
            android:layout_gravity="center"
            android:id="@+id/bRcancelar"/>


    </LinearLayout>

</LinearLayout>
